add_subdirectory(hdsf6)
add_subdirectory(lamodbus)
add_subdirectory(omas)
add_subdirectory(vaisala)
add_subdirectory(ysp)
add_subdirectory(kelmandga)
add_subdirectory(modbus)
add_subdirectory(tmpwia)
add_subdirectory(weishuimidu)
add_subdirectory(zfsf6)
add_subdirectory(ZSAR)
add_subdirectory(MMXN)
add_subdirectory(test)
